--- a/Python Scripts/Intent mining theory and code.ipynb
+++ b/Python Scripts/Intent mining theory and code.ipynb
@@ -109,9 +109,12 @@
     "\n",
     "### Logical expressions (copy/paste in thesis later - LATEX style)\n",
     "#### ♦ EXAMPLE\n",
-    "1. \\begin{equation} d \\leftarrow EX \\space, if\\space (\"let's\" \\in d \\space) \\space \\land (\"try\" \\in d \\space \\lor \"see\" \\in d \\space \\lor \"think\" \\in d \\space \\lor \"pick\" \\in d \\space \\lor \"say\" \\in d) \\end{equation} \n",
+    "1. \\begin{equation} EX \\leftarrow d \\space, if\\space (\"let's\" \\in d \\space) \\space \\land (\"try\" \\in d \\space \\lor \"see\" \\in d \\space \\lor \"think\" \\in d \\space \\lor \"pick\" \\in d \\space \\lor \"say\" \\in d) \\end{equation} \n",
     "\n",
-    "2. \\begin{equation} d \\leftarrow EX \\space, if\\space (\"example\" \\in d \\space) \\lor (\"for \\space instance\" \\in d) \\space \\lor (\"suppose\" \\in d) \\space \\lor (\"assume\" \\in d) \\space \\lor (\"includes\" \\in d) \\space \\lor (\"imagine\" \\in d) \\space \\end{equation} \n",
+    "2. \\begin{equation} EX \\leftarrow d \\space, if\\space (\"example\" \\in d \\space) \\lor (\"for \\space instance\" \\in d) \\space \\lor (\"suppose\" \\in d) \\space \\lor (\"assume\" \\in d) \\space \\lor (\"includes\" \\in d) \\space \\lor (\"imagine\" \\in d) \\space \\end{equation} \n",
+    "\n",
+    "\\begin{equation} C \\leftarrow d, if \\space (T_{1}..T_{n}) \\in \\space d \\land \\neg (TN_{1}..TN{n}) \\in d \\end{equation}\n",
+    "\\begin{equation} C \\leftarrow d, if \\space (T_{1}) \\in \\space d \\land (TN_{1} \\lor TN_{3} \\lor ... TN{n}) \\in d \\end{equation}\n",
     "\n",
     "Latex Formula Formatter: https://www.codecogs.com/eqnedit.php"
    ]
