--- a/Python Scripts/NaiveBayes Classifier (my data).ipynb
+++ b/Python Scripts/NaiveBayes Classifier (my data).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,20 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Removing punctuation from file..] \n",
-      "[Removing MultiSpace..] \n",
-      "[Stemming..]\n",
-      "[Writing to file..] C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\processedMerged.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "iFilePath = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\allMerged.txt\"\n",
     "\n",
@@ -201,18 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total sent:  8380  | TRAIN sent:  6285  | TEST sent:  2095\n",
-      "Sent:  0  | Train:  6285  | Test: 2095\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file = open(r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\processedMerged.txt\", 'r', encoding = \"ISO-8859-1\")\n",
     "sentences = file.read().split('\\n')\n",
@@ -282,52 +262,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Accuracy: 79.27 %\n",
-      "Most Informative Features\n",
-      "            contains(wo) = True                  : CD     =    333.0 : 1.0\n",
-      "        contains(though) = True                  : CD     =    161.1 : 1.0\n",
-      "          contains(shap) = True                  : EX     =    143.7 : 1.0\n",
-      "           contains(ask) = True                  : SM     =    138.3 : 1.0\n",
-      "        contains(valley) = True                  : SM     =    138.3 : 1.0\n",
-      "         contains(cours) = True                  : EX     =     86.2 : 1.0\n",
-      "        contains(follow) = True                  : CM     =     71.3 : 1.0\n",
-      "        contains(exampl) = True               EX : CD     =     64.5 : 1.0\n",
-      "        contains(import) = True                  : CD     =     63.2 : 1.0\n",
-      "       contains(instead) = True                  : CD     =     61.7 : 1.0\n",
-      "iteration execution time: 3.50 min\n",
-      "Runs:  1\n",
-      "Execution time: 3.50 min\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### ------------------ Naive Bayes train\n",
     "start = time.time()\n",
-    "runs = 0\n",
+    "runs = 1\n",
     "\n",
     "with open(r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\NBayeslog.txt\", \"a\", encoding = \"utf-8\") as oFile:\n",
     "    \"\"\" -------- ATTENTION: Nr of Iterations TIMES 5 MIN!!! -------------- \"\"\"\n",
-    "    while(runs < 1):  \n",
+    "    while(runs <= 1):  \n",
     "        startIter = time.time()\n",
-    "        bayes = NaiveBayesClassifier(train)\n",
+    "        bayes = NaiveBayesClassifier(train)        # TIME CONSUMING!!! TRAINING PHASE!\n",
     "\n",
     "        # Compute accuracy\n",
     "        accuracy = bayes.accuracy(test)*100\n",
     "        allRunsAccuracy.append(accuracy)\n",
     "        oFile.write(\"\\nAccuracy: {0:.2f} %\".format(accuracy))\n",
     "        print(\"\\nAccuracy: {0:.2f} %\".format(bayes.accuracy(test)*100))\n",
-    "\n",
+    "        \n",
     "        # Show 50 most informative features\n",
     "        # This cannot be saved in the output file as it return None\n",
-    "        bayes.show_informative_features(10)\n",
+    "        bayes.show_informative_features(5)\n",
     "        runs += 1\n",
     "        endIter = time.time()\n",
     "        print(\"iteration execution time: {0:.2f} min\".format((endIter - startIter)/60))\n",
