--- a/Python Scripts/NaiveBayes Classifier (my data).ipynb
+++ b/Python Scripts/NaiveBayes Classifier (my data).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,11 +23,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#Sent Train:  6668  | #Sent Test:  2223\n",
+      "Sent:  0  | Train:  6668  | Test: 2223\n"
+     ]
+    }
+   ],
    "source": [
-    "file = open(r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\Intent Mining ALL files\\allMerged.txt\", 'r', encoding = \"ISO-8859-1\")\n",
+    "#file = open(r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\Intent Mining ALL files\\allMerged.txt\", 'r', encoding = \"ISO-8859-1\")\n",
+    "file = open(r\"C:\\Users\\a.dimitrova\\Desktop\\Course data Thesis\\INTENT MINING\\allMerged.txt\", 'r', encoding = \"ISO-8859-1\")\n",
     "sentences = file.read().split('\\n')\n",
     "text = \"\"\n",
     "\n",
@@ -99,19 +111,73 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Accuracy: 78.08 %\n",
+      "Most Informative Features\n",
+      "       contains(protect) = True               AD : CD     =   1493.7 : 1.0\n",
+      "    contains(researcher) = True               AD : CD     =   1493.7 : 1.0\n",
+      "        contains(backup) = True               AD : CD     =    829.8 : 1.0\n",
+      "       contains(project) = True               AD : CD     =    829.8 : 1.0\n",
+      "     contains(beginning) = True               AD : CD     =    497.9 : 1.0\n",
+      "       contains(against) = True               AD : CD     =    497.9 : 1.0\n",
+      "       contains(storage) = True               AD : CD     =    439.3 : 1.0\n",
+      "   contains(appropriate) = True               AD : CD     =    439.3 : 1.0\n",
+      "          contains(loss) = True               AD : CD     =    439.3 : 1.0\n",
+      "            contains(wo) = True                  : CD     =    439.3 : 1.0\n",
+      "          contains(help) = True               AD : CD     =    355.6 : 1.0\n",
+      "         contains(place) = True               AD : CD     =    257.5 : 1.0\n",
+      "           contains(ask) = True                  : SM     =    220.0 : 1.0\n",
+      "        contains(though) = True                  : SM     =    220.0 : 1.0\n",
+      "    contains(strategies) = True               AD : EX     =    214.0 : 1.0\n",
+      "     contains(integrate) = True                  : EX     =    214.0 : 1.0\n",
+      "          contains(data) = True               AD : NL     =    193.0 : 1.0\n",
+      "         contains(maybe) = True                  : NL     =    193.0 : 1.0\n",
+      "     contains(important) = True                  : CD     =    135.8 : 1.0\n",
+      "          contains(even) = True                  : EX     =    128.4 : 1.0\n",
+      "           contains(has) = True               AD : EX     =    128.4 : 1.0\n",
+      "        contains(course) = True                  : EX     =    128.4 : 1.0\n",
+      "         contains(model) = True                  : CD     =    122.4 : 1.0\n",
+      "          contains(from) = True               AD : NL     =    115.8 : 1.0\n",
+      "          contains(okay) = True                  : CM     =    103.0 : 1.0\n",
+      "      contains(instance) = True               EX : CD     =     89.2 : 1.0\n",
+      "          contains(will) = True               AD : NL     =     82.7 : 1.0\n",
+      "           contains(say) = True                  : NL     =     82.7 : 1.0\n",
+      "       contains(instead) = True                  : CD     =     78.6 : 1.0\n",
+      "   contains(identifiers) = True               CM : CD     =     72.5 : 1.0\n",
+      "       contains(example) = True               EX : CD     =     71.7 : 1.0\n",
+      "        contains(lesson) = True               SM : CD     =     65.6 : 1.0\n",
+      "         contains(hello) = True               NL : CD     =     64.5 : 1.0\n",
+      "      contains(bouncing) = True               CM : CD     =     56.4 : 1.0\n",
+      "         contains(music) = True               NL : CD     =     55.9 : 1.0\n",
+      "          contains(your) = True                  : NL     =     52.6 : 1.0\n",
+      "            contains(if) = True               AD : NL     =     52.6 : 1.0\n",
+      "        contains(opened) = True               AP : CD     =     50.3 : 1.0\n",
+      "     contains(practices) = True               AP : CD     =     50.3 : 1.0\n",
+      "     contains(summarize) = True               SM : CD     =     49.0 : 1.0\n",
+      "        contains(basics) = True               SM : CD     =     49.0 : 1.0\n",
+      "           contains(n't) = True                  : CM     =     44.1 : 1.0\n",
+      "     contains(protocols) = True               SM : CD     =     43.0 : 1.0\n",
+      "   contains(researchers) = True               AP : CD     =     41.1 : 1.0\n",
+      "      contains(connects) = True               CM : CD     =     40.3 : 1.0\n",
+      "       contains(central) = True               CM : CD     =     40.3 : 1.0\n",
+      "         contains(reset) = True               CM : CD     =     40.3 : 1.0\n",
+      "      contains(blending) = True               CM : CD     =     40.3 : 1.0\n",
+      "    contains(techniques) = True               CM : CD     =     40.3 : 1.0\n",
+      "      contains(topology) = True               CM : CD     =     38.0 : 1.0\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "must be str, not float",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-9a203ba3fc69>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m         \u001b[1;31m# Compute accuracy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m         \u001b[0maccuracy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbayes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m         \u001b[0mallRunsAccuracy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m         \u001b[0moFile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\textblob\\classifiers.py\u001b[0m in \u001b[0;36maccuracy\u001b[1;34m(self, test_set, format)\u001b[0m\n\u001b[0;32m    264\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m  \u001b[1;31m# test_set is a list of tuples\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    265\u001b[0m             \u001b[0mtest_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtest_set\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 266\u001b[1;33m         \u001b[0mtest_features\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextract_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    267\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mnltk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclassify\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclassifier\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_features\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    268\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\textblob\\classifiers.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    264\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m  \u001b[1;31m# test_set is a list of tuples\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    265\u001b[0m             \u001b[0mtest_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtest_set\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 266\u001b[1;33m         \u001b[0mtest_features\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextract_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    267\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mnltk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclassify\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maccuracy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclassifier\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest_features\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    268\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\textblob\\classifiers.py\u001b[0m in \u001b[0;36mextract_features\u001b[1;34m(self, text)\u001b[0m\n\u001b[0;32m    181\u001b[0m         \u001b[1;31m# Feature extractor may take one or two arguments\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    182\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 183\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeature_extractor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_word_set\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    184\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mTypeError\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    185\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeature_extractor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\textblob\\classifiers.py\u001b[0m in \u001b[0;36mbasic_extractor\u001b[1;34m(document, train_set)\u001b[0m\n\u001b[0;32m     95\u001b[0m     \u001b[0mtokens\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_get_document_tokens\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdocument\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     96\u001b[0m     features = dict(((u'contains({0})'.format(word), (word in tokens))\n\u001b[1;32m---> 97\u001b[1;33m                                             for word in word_features))\n\u001b[0m\u001b[0;32m     98\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     99\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\textblob\\classifiers.py\u001b[0m in \u001b[0;36m<genexpr>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     95\u001b[0m     \u001b[0mtokens\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_get_document_tokens\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdocument\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     96\u001b[0m     features = dict(((u'contains({0})'.format(word), (word in tokens))\n\u001b[1;32m---> 97\u001b[1;33m                                             for word in word_features))\n\u001b[0m\u001b[0;32m     98\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     99\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-549df65fb3c7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     35\u001b[0m         \u001b[0mbayes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow_informative_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m50\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m         \u001b[0mendIter\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 37\u001b[1;33m         \u001b[0moFile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Iteration execution time: \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mendIter\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mstartIter\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"\\n\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     38\u001b[0m         \u001b[0mruns\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: must be str, not float"
      ]
     }
    ],
@@ -121,35 +187,22 @@
     "runs = 0\n",
     "\n",
     "while(runs <= 10):\n",
-    "    with open(r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\NBayeslog.txt\", \"a\", encoding = \"utf-8\") as oFile:\n",
-    "        #bayes = NaiveBayesClassifier(train)\n",
-    "\n",
-    "        \"\"\"\n",
-    "        # Classify some text\n",
-    "        print(\"The other notion is existential stability,which means there exists the flipped it's called an existential quantifier   ==>  \",bayes.classify(\"The other notion is existential stability,which means there exists the flipped it's called an existential quantifier \"))  # \"pos\"\n",
-    "        print(\"In fact,like saw,we looked at a counter example that allowed us to actually destabilize,which means drive the state off to infinity,by being unlucky or unclever in how we transitioned in and out of the different modes    ==>> \",bayes.classify(\"In fact,like saw,we looked at a counter example that allowed us to actually destabilize,which means drive the state off to infinity,by being unlucky or unclever in how we transitioned in and out of the different modes \"))   # \"neg\"\n",
-    "\n",
-    "        # Classify a TextBlob\n",
-    "        blob = TextBlob(\"And in the next lecture,we will see,first of all,why the tortoise is able to beat the hare and what to do about it,meaning how do you make the rabbit overtake the turtle  \"\n",
-    "                        \"We know what the solution to this system is\", classifier=bayes)\n",
-    "        print(blob)\n",
-    "        print(blob.classify())\n",
-    "\n",
-    "        for sentence in blob.sentences:\n",
-    "            print(sentence)\n",
-    "            print(sentence.classify())\n",
-    "\n",
-    "        \"\"\"\n",
+    "    startIter = time.time()\n",
+    "    with open(r\"C:\\Users\\a.dimitrova\\Desktop\\Course data Thesis\\INTENT MINING\\NBayeslog.txt\", \"a\", encoding = \"utf-8\") as oFile:\n",
+    "        bayes = NaiveBayesClassifier(train)\n",
     "\n",
     "        # Compute accuracy\n",
     "        accuracy = bayes.accuracy(test)*100\n",
     "        allRunsAccuracy.append(accuracy)\n",
-    "        oFile.write(\"\\nAccuracy: {0:.2f} %\".format(accuracy))\n",
+    "        oFile.write(\"Accuracy: {0:.2f} %\\n\".format(accuracy))\n",
     "        print(\"\\nAccuracy: {0:.2f} %\".format(bayes.accuracy(test)*100))\n",
     "\n",
-    "        # Show 30 most informative features\n",
+    "        # Show 50 most informative features\n",
     "        # This cannot be saved in the output file as it return None\n",
     "        bayes.show_informative_features(50)\n",
+    "        endIter = time.time()\n",
+    "        #oFile.write(\"Iteration execution time: \"+(endIter - startIter)/60+\"\\n\")\n",
+    "        runs += 1\n",
     "        \n",
     "end = time.time()\n",
     "print(\"Runs: \",len(allRunsAccuracy))\n",
