trying to get k-fold cross validation metrics

--- a/Python Scripts/NaiveBayes Classifier (my data).ipynb
+++ b/Python Scripts/NaiveBayes Classifier (my data).ipynb
@@ -295,6 +295,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "clf = svm.SVC(kernel='linear', C=1)\n",
+    "scores = cross_val_score(clf, train, test, cv=5)\n",
+    "print(scores)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
