extract labelling evaluation

--- a/Python Scripts/Intent mining theory and code.ipynb
+++ b/Python Scripts/Intent mining theory and code.ipynb
@@ -74,8 +74,8 @@
     "\n",
     "-----------------------------------\n",
     "### ALL RULES\n",
-    "- [Priority] [Status] [Label] <<< [RULE]\n",
-    "- [1] [✔] EX_1 <<< `example` || OR `for instance` || `assume` || `suppose` || `imagine` || `as` || `simulation` || `diagram` \n",
+    "- [Priority] [Status] [Label] \\begin{math} \\leftarrow \\end{math} [RULE]\n",
+    "- [1] [✔] EX_1 <<< `example` || `for instance` || `assume` || `suppose` || `imagine` || `as` || `simulation` || `diagram` \n",
     "- [2] [✔] EX_2 <<< `Let's` __&&__ try || think || see || pick || take a look || say ..\n",
     "- [2] [✔] CD_1 <<< `Let's` __&&__ look at || make || put || do || start || prove || evaluate || back || try || just __AND NO__ `example` || `assume` || `suppose` || `imagine` || `diagram`\n",
     "- [4] [✔] CD_2 <<< `in other words` || `basically` __AND NO__ `should` || `have to` || `must` \n",
