--- a/Python Scripts/CountingData.ipynb
+++ b/Python Scripts/CountingData.ipynb
@@ -143,66 +143,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "____________________________________________________________\n",
-      "| FILES: 113 | SENTENCES: 8979 | FOLDERS: 0 | TUPLES: 8889 |\n",
-      "| LABELED SENT: 8977 | UNLABELED SENT: 2 |\n",
-      "¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯\n",
       "____________________________________________\n",
       "|CD     |CM    |SM    |AP    |EX    |NL    | \n",
-      "|6650   |278   |571   |318   |562   |507   | \n",
-      "|74.81% |3.13% |6.42% |3.58% |6.32% |5.70% |\n",
+      "|6621   |304   |570   |318   |566   |0   | \n",
+      "|78.99% |3.63% |6.80% |3.79% |6.75% |0.00% |\n",
       "¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯\n",
-      "___________________________________\n",
-      "| Labeled: 99.98 % | \n",
-      "| CD: 6650 | CM/SM/AP/EX/NL: 2236 |\n",
-      "¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯\n",
-      "__________________________________________\n",
-      "| FILES: 113 | SENTENCES: 8979\n",
-      "| LABELED SENT: 8977 | UNLABELED SENT: 2 |\n",
-      "¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯\n",
+      "_____________________________________________\n",
+      "| FILES: 111 |\n",
+      "| SENTENCES_АLL: 8960 | SENTENCES_REL: 8382 |\n",
+      "| LABELED SENT: 8958 | UNLABELED SENT: 2 |\n",
+      "¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯\n",
+      "____________________________________\n",
+      "|CD     |CM    |SM    |AP    |EX    | \n",
+      "|6621   |304   |570   |318   |566   | \n",
+      "|78.99% |3.63% |6.80% |3.79% |6.75% |\n",
+      "¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯\n",
       "___________________________________________________________________________________________\n",
       "\n",
-      "-------PRINTING the first 25 <<CM>> TUPLES------\n",
+      "-------PRINTING the first 5 <<CM>> TUPLES------\n",
       "\n",
       "('CM', 'this is the average speed of the ball ')\n",
       "('CM', \"speed is how far you've traveled over how long it took you so if i divide these this is the speed of the ball the average speed of the ball between point four and point five seconds and this works out to be NUMBER centimeters per second i mean i'm dividing by this very nice number point one \")\n",
       "('CM', 'music here is a classic related rates problem ')\n",
       "('CM', 'this sort of object is called a differential ')\n",
-      "('CM', \"it's called a differential \")\n",
-      "('CM', \"we dive into thinking more about volume and length and things,let's just focus a bit more on area \")\n",
-      "('CM', \"music when you're integrating powers of sines and cosines \")\n",
-      "('CM', \"that's what the fundamental theorem of calculus is,is going to do for us \")\n",
-      "('CM', \"music what's the derivative of a product of two functions \")\n",
-      "('CM', 'the derivative of a product is given by this,the product rule ')\n",
-      "('CM', \"we din't really need the product rule to compute that derivative \")\n",
-      "('CM', \"once,we believe that sine and cosine are important functions,they're all about the connection between angles and lengths \")\n",
-      "('CM', 'you might think about trigonometry as being something about right triangles ')\n",
-      "('CM', \"music let's integrate OMITTED squared from to by using the definition of integral \")\n",
-      "('CM', 'and i can write down the riemann sum,right ')\n",
-      "('CM', \"that's acceleration \")\n",
-      "('CM', 'anf for me the payoff is worth it,because the concepts in calculus are just really cool ')\n",
-      "('CM', \"music we're going to calculate the derivative of OMITTED squared with respect to x. maybe a little bit more prosaically,i want to know how wiggling OMITTED affect OMITTED squared \")\n",
-      "('CM', 'probably helps to review a little bit of the geometry that goes into this problem ')\n",
-      "('CM', \"the height of the can and the radius of the can is what i'm trying to figure out \")\n",
-      "('CM', 'it involves the height and also a radius ')\n",
-      "('CM', 'music differentiating is a process really guaranteed to work ')\n",
-      "('CM', 'in contrast antidifferentiation might be really hard ')\n",
-      "('CM', 'what do i mean by elementary functions ')\n",
-      "('CM', 'i mean things like polynomials,trig functions,e to the x,log,things like that,right ')\n"
+      "('CM', \"it's called a differential \")\n"
      ]
     }
    ],
    "source": [
     "#path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\all coures to select from\"   #THE REST OF THE DATA\n",
     "#path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\"    #TRAIN / TEST\n",
-    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\"   # toshiba laptop\n",
+    "#path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\"   # toshiba laptop\n",
+    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\Intent Mining ALL files\"\n",
+    "\n",
+    "fileExtention = \"_labels.txt\"\n",
     "\n",
     "\"\"\"\n",
     "TRAIN:     <<< FILES: 111 | SENTENCES: 8835 | FOLDERS: 10 | TUPLES: 8724 >>>\n",
@@ -210,11 +191,15 @@
     "\"\"\"\n",
     "\n",
     "sentCounter = 0\n",
+    "finalSentCounter = 0  # to be used for sentences WITHOUT counting the NL ones\n",
     "fileCounter = 0\n",
     "folderCounter = 0\n",
-    "allTuples = []\n",
+    "allTuples = []   # holds tuples with LABEL | SENTENCE for all valid labelled sentences while the rest is removed, so this is\n",
+    "# more accurate metric for totalsentence number AND IGNORES THE NL sentences\n",
     "unlabeledSent = 0\n",
     "unlabeledFiles = 0\n",
+    "\n",
+    "curFilePath = \"\"\n",
     "\n",
     "for root, subdirs, files in os.walk(path):\n",
     "\n",
@@ -223,9 +208,10 @@
     "        curFilePath = os.path.join(root, curFile)\n",
     "\n",
     "        if os.path.isdir(curFilePath):\n",
+    "            folderCounter += 1\n",
     "            pass\n",
     "\n",
-    "        else:\n",
+    "        elif curFilePath.endswith(fileExtention):\n",
     "            try:\n",
     "                fileCounter += 1\n",
     "                curFile = open(curFilePath, 'r', encoding = \"ISO-8859-1\") #IMPORTANT ENCODING! UTF8 DOESN'T WORK\n",
@@ -242,7 +228,8 @@
     "                            pass\n",
     "                        else: \n",
     "                            sentTuple = (sentParts[0],sentParts[1])\n",
-    "                            allTuples.append(sentTuple)\n",
+    "                            if sentParts[0] != \"NL\":\n",
+    "                                allTuples.append(sentTuple)\n",
     "                            if sentTuple[0] == '':\n",
     "                                #Add to unlabeledSent if sentence has no label, but is split in 2\n",
     "                                unlabeledSent += 1\n",
@@ -253,14 +240,14 @@
     "            except FileNotFoundError as e:\n",
     "                print(\"SKIPPING [{}]: {}\".format(e.strerror,curFile))\n",
     "                pass\n",
+    "            \n",
+    "        else:\n",
+    "            pass\n",
     "\n",
-    "print(\"____________________________________________________________\")\n",
-    "print(\"| FILES: {} | SENTENCES: {} | FOLDERS: {} | TUPLES: {} |\".format(fileCounter, sentCounter, folderCounter, len(allTuples)))\n",
-    "print(\"| LABELED SENT: {} | UNLABELED SENT: {} |\".format((sentCounter - unlabeledSent),unlabeledSent))\n",
-    "print(\"¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯\")\n",
-    "#print(\"\\n<<< LABELED FILES: {} | UNLABELED FILES: {} >>>\".format((fileCounter - unlabeledFiles),unlabeledFiles))\n",
-    "\n",
-    "\n",
+    "        \n",
+    "finalSentCounter = sentCounter - NLtuples   #without considering the NL tuples\n",
+    "        \n",
+    "       \n",
     "# count sentences labeled with specific label\n",
     "CDtuples = 0\n",
     "CMtuples = 0\n",
@@ -278,40 +265,36 @@
     "    if \"SM\" in tup: SMtuples += 1\n",
     "    if \"AP\" in tup: APtuples += 1\n",
     "    if \"EX\" in tup: EXtuples += 1\n",
-    "    if \"NL\" in tup: NLtuples += 1        \n",
-    "        \n",
-    "        \n",
+    "    if \"NL\" in tup: NLtuples += 1     \n",
     "        \n",
     "percentCD = (CDtuples / len(allTuples)) * 100\n",
     "percentCM = (CMtuples / len(allTuples)) * 100\n",
     "percentAP = (APtuples / len(allTuples)) * 100\n",
     "percentEX = (EXtuples / len(allTuples)) * 100\n",
     "percentSM = (SMtuples / len(allTuples)) * 100\n",
-    "percentNL = (NLtuples / len(allTuples)) * 100\n",
+    "#percentNL = (NLtuples / len(allTuples-NLtuples)) * 100\n",
     "\n",
     "print(\"____________________________________________\")\n",
     "print(\"|CD     |CM    |SM    |AP    |EX    |NL    | \\n|{}   |{}   |{}   |{}   |{}   |{}   | \".format(CDtuples,CMtuples,SMtuples,APtuples,EXtuples,NLtuples))\n",
     "print(\"|{0:.2f}% |{1:.2f}% |{2:.2f}% |{3:.2f}% |{4:.2f}% |{5:.2f}% |\".format(percentCD,percentCM,percentSM,percentAP,percentEX,percentNL))\n",
     "print(\"¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯\")\n",
     "\n",
-    "######## Display data in percentage for labeled / unlabeled sentences\n",
-    "precentageLabeled = ((sentCounter - unlabeledSent)/sentCounter)*100\n",
-    "print(\"___________________________________\")\n",
-    "print(\"| Labeled: {0:.2f}\".format(precentageLabeled),\"% | \\n| CD: {} | CM/SM/AP/EX/NL: {} |\".format(CDtuples,CMtuples+SMtuples+APtuples+EXtuples+NLtuples))\n",
-    "print(\"¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯\")\n",
+    "print(\"_____________________________________________\")\n",
+    "print(\"| FILES: {} |\\n| SENTENCES_АLL: {} | SENTENCES_REL: {} |\".format(fileCounter, finalSentCounter, len(allTuples)))\n",
+    "print(\"| LABELED SENT: {} | UNLABELED SENT: {} |\".format((finalSentCounter - unlabeledSent),unlabeledSent))\n",
+    "print(\"¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯\")\n",
+    "\n",
+    "print(\"____________________________________\")\n",
+    "print(\"|CD     |CM    |SM    |AP    |EX    | \\n|{}   |{}   |{}   |{}   |{}   | \".format(CDtuples,CMtuples,SMtuples,APtuples,EXtuples))\n",
+    "print(\"|{0:.2f}% |{1:.2f}% |{2:.2f}% |{3:.2f}% |{4:.2f}% |\".format(percentCD,percentCM,percentSM,percentAP,percentEX))\n",
+    "print(\"¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯\")\n",
+    "\n",
+    "\n",
     "\n",
     "################## DISPLAY DATA FOR SPECIFIC LABEL #############\n",
     "tupType = \"cm\".upper()    #convert to Upper case otherwise it shows no res\n",
     "num = 0\n",
-    "displayNum = 25\n",
-    "\n",
-    "\n",
-    "print(\"__________________________________________\")\n",
-    "print(\"| FILES: {} | SENTENCES: {}\".format(fileCounter, sentCounter))\n",
-    "print(\"| LABELED SENT: {} | UNLABELED SENT: {} |\".format((sentCounter - unlabeledSent),unlabeledSent))\n",
-    "print(\"¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯\")\n",
-    "\n",
-    "\n",
+    "displayNum = 5\n",
     "\n",
     "print(\"___________________________________________________________________________________________\")\n",
     "print(\"\\n-------PRINTING the first {} <<{}>> TUPLES------\\n\".format(displayNum,tupType))\n",
