--- a/Python Scripts/NaiveBayes Classifier (my data).ipynb
+++ b/Python Scripts/NaiveBayes Classifier (my data).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,7 @@
     "#nltk.download('averaged_perceptron_tagger')\n",
     "from pathlib import Path\n",
     "from beautifultable import BeautifulTable\n",
+    "from sklearn.metrics import classification_report, f1_score, accuracy_score, confusion_matrix\n",
     "\n",
     "import re, string, unicodedata\n",
     "import contractions\n",
@@ -49,6 +50,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# REMOVE THE NL VALUES FROM THE FILE!\n",
+    "\n",
+    "iFile = open(r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\allMerged.txt\", 'r', encoding = \"ISO-8859-1\")\n",
+    "sentences = iFile.read().split('\\n')\n",
+    "\n",
+    "with open(r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\allMergedNoNL.csv\", 'w', encoding = \"ISO-8859-1\") as oFile:\n",
+    "    for sent in sentences:\n",
+    "        parts = sent.split(\"|\")\n",
+    "        if len(parts) == 2:\n",
+    "            label = parts[0]\n",
+    "            sentence = parts[1]\n",
+    "\n",
+    "            if label == \"NL\": \n",
+    "                pass\n",
+    "            else: \n",
+    "                oFile.write(label+\"|\"+sentence+\"\\n\")\n",
+    "            \n",
+    "iFile.close()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -57,11 +84,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Removing punctuation from file..] \n",
+      "[Removing MultiSpace..] \n",
+      "[Stemming..]\n",
+      "[Writing to file..] C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\processedMerged.txt\n"
+     ]
+    }
+   ],
    "source": [
-    "iFilePath = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\allMerged.txt\"\n",
+    "iFilePath = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\allMergedNoNL.txt\"\n",
     "\n",
     "fullSWList = ['about', 'above', 'after', 'again', 'against', 'all', 'a' , 'am', 'an', 'and', 'any', 'are', 'as', \n",
     "                'at', 'be', 'because', 'been', 'before', 'being', 'below', 'between', 'both', 'but', 'by', 'can', 'did', \n",
@@ -190,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,54 +241,55 @@
     "\n",
     "sentences = text.split(\"\\n\")\n",
     "\n",
-    "nrsplit = 0\n",
-    "textsize = len(sentences)\n",
-    "trainTestRatio = round(0.75 * textsize)\n",
-    "\n",
-    "print(\"Total sent: \",textsize, \" | TRAIN sent: \",trainTestRatio,\" | TEST sent: \",textsize-trainTestRatio)\n",
-    "\n",
     "trainS = []\n",
     "testS = []\n",
-    "\n",
-    "while not len(sentences) == 0:\n",
-    "    nrsplit += 1\n",
-    "    if nrsplit <= trainTestRatio:\n",
-    "        curLine = random.choice(sentences)\n",
-    "        sentences.remove(curLine)\n",
-    "        trainS.append(curLine) \n",
-    "    elif nrsplit > trainTestRatio:\n",
-    "        curLine = random.choice(sentences)\n",
-    "        sentences.remove(curLine)\n",
-    "        testS.append(curLine) \n",
-    "        \n",
-    "\n",
-    "print(\"Sent: \",len(sentences),\" | Train: \",len(trainS),\" | Test:\",len(testS))   \n",
-    "\n",
     "train = []\n",
     "test = []\n",
     "\n",
-    "for sent in trainS:\n",
-    "    parts = sent.split('|')\n",
-    "    if len(parts) > 1:\n",
-    "        label = parts[0]\n",
-    "        sent = parts[1]\n",
-    "        tup = (sent,label)\n",
-    "        train.append(tup)\n",
-    "    else:\n",
-    "        continue\n",
+    "def split_testTrain():\n",
+    "    nrsplit = 0\n",
+    "    textsize = len(sentences)\n",
+    "    trainTestRatio = round(0.75 * textsize)\n",
     "\n",
-    "for sent in testS:\n",
-    "    parts = sent.split('|')\n",
-    "    if len(parts) > 1:\n",
-    "        label = parts[0]\n",
-    "        sent = parts[1]\n",
-    "        tup = (sent,label)\n",
-    "        test.append(tup)\n",
-    "    else:\n",
-    "        continue\n",
+    "    #print(\"Total sent: \",textsize, \" | TRAIN sent: \",trainTestRatio,\" | TEST sent: \",textsize-trainTestRatio)\n",
     "\n",
+    "    while not len(sentences) == 0:\n",
+    "        nrsplit += 1\n",
+    "        if nrsplit <= trainTestRatio:\n",
+    "            curLine = random.choice(sentences)\n",
+    "            sentences.remove(curLine)\n",
+    "            trainS.append(curLine) \n",
+    "        elif nrsplit > trainTestRatio:\n",
+    "            curLine = random.choice(sentences)\n",
+    "            sentences.remove(curLine)\n",
+    "            testS.append(curLine) \n",
+    "\n",
+    "    #print(\"Sent: \",len(sentences),\" | Train: \",len(trainS),\" | Test:\",len(testS))   \n",
+    "    print(\"TRAIN: \",len(trainS),\" | TEST:\",len(testS))   \n",
     "    \n",
-    "### ------------------ END SPLITING TEST / TRAIN with my own data"
+    "    for sent in trainS:\n",
+    "        parts = sent.split('|')\n",
+    "        if len(parts) > 1:\n",
+    "            label = parts[0]\n",
+    "            sent = parts[1]\n",
+    "            tup = (sent,label)\n",
+    "            train.append(tup)\n",
+    "        else:\n",
+    "            continue\n",
+    "\n",
+    "    for sent in testS:\n",
+    "        parts = sent.split('|')\n",
+    "        if len(parts) > 1:\n",
+    "            label = parts[0]\n",
+    "            sent = parts[1]\n",
+    "            tup = (sent,label)\n",
+    "            test.append(tup)\n",
+    "        else:\n",
+    "            continue\n",
+    "### ------------------ END SPLITING TEST / TRAIN with my own data\n",
+    "            \n",
+    "#split_testTrain()\n",
+    "#print(\"\\n\",train[:10])"
    ]
   },
   {
@@ -264,19 +303,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRAIN:  6286  | TEST: 2095\n"
+     ]
+    }
+   ],
    "source": [
     "### ------------------ Naive Bayes train\n",
     "start = time.time()\n",
     "runs = 1\n",
     "\n",
-    "with open(r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\NBayeslog.txt\", \"a\", encoding = \"utf-8\") as oFile:\n",
-    "    \"\"\" -------- ATTENTION: Nr of Iterations TIMES 5 MIN!!! -------------- \"\"\"\n",
+    "with open(r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\NBayeslogNew.txt\", \"a\", encoding = \"utf-8\") as oFile:\n",
+    "    \"\"\" -------- ATTENTION: Nr of Iterations x 5 MIN!!! -------------- \"\"\"\n",
     "    while(runs <= 1):  \n",
     "        startIter = time.time()\n",
+    "        split_testTrain()           #redo the train-test split\n",
+    "        \n",
     "        bayes = NaiveBayesClassifier(train)        # TIME CONSUMING!!! TRAINING PHASE!\n",
     "\n",
-    "        # Compute accuracy\n",
+    "        # Compute accuracyf\n",
     "        accuracy = bayes.accuracy(test)*100\n",
     "        allRunsAccuracy.append(accuracy)\n",
     "        oFile.write(\"\\nAccuracy: {0:.2f} %\".format(accuracy))\n",
