--- a/Python Scripts/NaiveBayes Classifier (my data).ipynb
+++ b/Python Scripts/NaiveBayes Classifier (my data).ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -94,12 +94,12 @@
       "[Removing punctuation from file..] \n",
       "[Removing MultiSpace..] \n",
       "[Stemming..]\n",
-      "[Writing to file..] C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\processedMerged.txt\n"
+      "[Writing to file..] C:\\Users\\ani\\Dropbox\\Stuff\\university\\data\\processedMerged.txt\n"
      ]
     }
    ],
    "source": [
-    "iFilePath = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\allMergedNoNL.txt\"\n",
+    "iFilePath = r\"C:\\Users\\ani\\Dropbox\\Stuff\\university\\data\\allMergedNoNL.csv\"\n",
     "\n",
     "fullSWList = ['about', 'above', 'after', 'again', 'against', 'all', 'a' , 'am', 'an', 'and', 'any', 'are', 'as', \n",
     "                'at', 'be', 'because', 'been', 'before', 'being', 'below', 'between', 'both', 'but', 'by', 'can', 'did', \n",
@@ -199,7 +199,7 @@
     "    sentences = stripMultiSpace(sentences)\n",
     "    sentences = stem(sentences)\n",
     "    \n",
-    "    oFilePath = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\processedMerged.txt\"\n",
+    "    oFilePath = r\"C:\\Users\\ani\\Dropbox\\Stuff\\university\\data\\processedMerged.txt\"\n",
     "    with open(oFilePath, 'w', encoding = \"utf-8\") as oFile:\n",
     "        print(\"[Writing to file..]\",oFilePath)\n",
     "        for sent in sentences:\n",
@@ -228,11 +228,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = open(r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\INTENT MINING\\processedMerged.txt\", 'r', encoding = \"ISO-8859-1\")\n",
+    "file = open(r\"C:\\Users\\ani\\Dropbox\\Stuff\\university\\data\\processedMerged.txt\", 'r', encoding = \"ISO-8859-1\")\n",
     "sentences = file.read().split('\\n')\n",
     "text = \"\"\n",
     "\n",
@@ -301,14 +301,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TRAIN:  6286  | TEST: 2095\n"
+      "TRAIN:  6286  | TEST: 2096\n",
+      "\n",
+      "Accuracy: 79.10 %\n",
+      "Most Informative Features\n",
+      "            contains(wo) = True                  : CD     =    477.7 : 1.0\n",
+      "        contains(though) = True                  : CD     =    359.9 : 1.0\n",
+      "           contains(ask) = True                  : SM     =    325.8 : 1.0\n",
+      "         contains(cours) = True                  : EX     =    310.8 : 1.0\n",
+      "           contains(say) = True                  : AP     =    172.0 : 1.0\n",
+      "iteration execution time: 16.77 min\n",
+      "Runs:  8\n",
+      "Execution time: 16.77 min\n"
      ]
     }
    ],
@@ -331,7 +342,7 @@
     "        oFile.write(\"\\nAccuracy: {0:.2f} %\".format(accuracy))\n",
     "        print(\"\\nAccuracy: {0:.2f} %\".format(bayes.accuracy(test)*100))\n",
     "        \n",
-    "        # Show 50 most informative features\n",
+    "        # Show 5 most informative features\n",
     "        # This cannot be saved in the output file as it return None\n",
     "        bayes.show_informative_features(5)\n",
     "        runs += 1\n",
